--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -49,6 +49,8 @@
       background: url('../img/portrait_small.jpg');
       width: 150px;
       height: 150px;
+      background-position: center;
+    background-size: cover;
     }
   }
 
